# backend

./: .pdm-python  pyproject.toml
alunos/: admin.py  models.py  serializers.py  views.py
alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_pessoa.py  0004_alter_pessoa_options.py
config/: settings.py  urls.py
